--- a/BS-23-PracticalTest/appsettings.json
+++ b/BS-23-PracticalTest/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+
+    "ConString": "Data Source=PINKU-PC\\MSSQLSERVER01;Initial Catalog=BSPracticalTestXM;Persist Security Info=True;User=sa;Pwd=sa;MultipleActiveResultSets=True"
+
+  }
 }
